tests/snapshots/examples_fixtures/base__all_phase3.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/all_phase3.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/base/all_phase3.flx:5:1
  |
5 | Base.print("== Base directives smoke ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------------- expected () -> Unit, found () -> Unit with IO

Help:
  Suppressed 1 nearby duplicate E300 diagnostic(s).
== stdout ==
<not executed>
